# mailio

./: CMakeLists.txt
cmake/: mailio-config.cmake.in
examples/: CMakeLists.txt
test/: CMakeLists.txt
